# opencv_demo

./: README.md
lesson1/: CMakeLists.txt  ImageShow  ImageShow.cpp  ShowImage  ShowImage.cpp
lesson2/: CMakeLists.txt  ImageROI  ImageROI.cpp
lesson3/: CMakeLists.txt  ImageLinearBlending  ImageLinearBlending.cpp
lesson4/: CMakeLists.txt  ImageROILinearBlending  ImageROILinearBlending.cpp
